Bug 95252 - [deqp] deqp-gles31.functional.debug.object_labels.query_length_only crashes
Summary: [deqp] deqp-gles31.functional.debug.object_labels.query_length_only crashes
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Ian Romanick
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-03 19:24 UTC by Mark Janes
Modified: 2016-05-03 23:13 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2016-05-03 19:24:51 UTC
This test crashes with mesa 5989a2937f6a77e8f32ccc30cc7f9b3bd7bed9eb

mesa/objectlabel: don't do memcpy if bufSize is 0 (v2)

This prevents GL43-CTS.khr_debug.labels_non_debug from
memcpying all over the stack and crashing.

v2: actually fix the test.

Reviewed-by: Alejandro Piñeiro <apinheiro@igalia.com>
Signed-off-by: Dave Airlie <airlied@redhat.com>
Comment 1 Mark Janes 2016-05-03 21:02:53 UTC
patch on the list.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.